--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "webpack serve --config webpack/webpack.config.js --env mode=dev",
     "build": "webpack --config webpack/webpack.config.js --env mode=prod",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\""
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "keywords": [],
   "author": "",
@@ -34,14 +35,17 @@
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
+    "prettier": "^3.2.5",
     "react-refresh": "^0.14.2",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
